# SATySFi-MathML

./: .gitignore  README.md  Satyristes  package.satysfi-lock  satysfi-mathml-doc.opam  satysfi-mathml.opam  satysfi.yaml  test.sh
doc/: manual.saty
src/: html-parser.satyg  html-util.satyg  mathml.satyh  mathml.satyh-html
tests/: basic.saty  document-class.satyh-html  document.saty  html-util.saty  html-util.satysfi-lock  parser.saty
