opam-version: "2.0"
name: "satysfi-mathml-doc"
version: "1.0.0"
synopsis: "Document of A Great SATySFi Package"
description: """
Brilliant description comes here.
"""
maintainer: "Your name <email@example.com>"
authors: "Your name <email@example.com>"
license: "MIT" # Choose what you want
homepage: "https://github.com/<github-username>/satysfi-mathml"
dev-repo: "git+https://github.com/<github-username>/satysfi-mathml.git"
bug-reports: "https://github.com/<github-username>/satysfi-mathml/issues"
depends: [
  "satysfi" { >= "0.0.6" & < "0.0.7" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }

  # You may want to include the corresponding library
  "satysfi-mathml" {= "%{version}%"}

  # Other libraries
  "satysfi-dist"
  "satysfi-base"
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "mathml-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "mathml-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
