opam-version: "2.0"
name: "satysfi-mathml-doc"
version: "0.0.1"
synopsis: "Document of A Great SATySFi Package"
description: """
Brilliant description comes here.
"""
maintainer: "takemaro <info@takemaro.com>"
authors: "takemaro <info@takemaro.com>"
license: "LGPL-3.0-or-later"
homepage: "https://github.com/takemar/SATySFi-MathML"
dev-repo: "git+https://github.com/takemar/SATySFi-MathML.git"
bug-reports: "https://github.com/takemar/SATySFi-MathML/issues"
depends: [
  "satysfi" { >= "0.0.6" & < "0.0.7" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }

  # You may want to include the corresponding library
  "satysfi-mathml" {= "%{version}%"}

  # Other libraries
  "satysfi-dist"
  "satysfi-base"
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "mathml-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "mathml-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
