opam-version: "2.0"
name: "satysfi-mathml"
version: "1.0.0"
synopsis: "A Great SATySFi Package"
description: """
Brilliant description comes here.
"""
maintainer: "Your name <email@example.com>"
authors: "Your name <email@example.com>"
license: "MIT"
homepage: "https://github.com/<github-username>/satysfi-mathml"
dev-repo: "git+https://github.com/<github-username>/satysfi-mathml.git"
bug-reports: "https://github.com/<github-username>/satysfi-mathml/issues"
depends: [
  "satysfi" { >= "0.0.6" & < "0.0.7" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }

  # If your library depends on other libraries, please write down here
  "satysfi-dist"
  "satysfi-base"
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "mathml"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "mathml"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
